--- a/package.json
+++ b/package.json
@@ -5,12 +5,13 @@
   "type": "module",
   "scripts": {
     "dev": "next dev --turbopack",
-    "build": "next build",
+    "build": "prisma generate && next build",
     "start": "next start",
     "lint": "next lint",
     "seed": "tsx src/seed/seed-database.ts"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^2.10.0",
     "@paypal/react-paypal-js": "^8.8.3",
     "@prisma/client": "^6.7.0",
     "@prisma/extension-accelerate": "^1.3.0",
@@ -24,6 +25,7 @@
     "motion": "^12.23.12",
     "next": "15.3.2",
     "next-auth": "^5.0.0-beta.28",
+    "nodemailer": "^6.10.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.56.4",
@@ -31,6 +33,7 @@
     "react-toastify": "^11.0.5",
     "swiper": "^11.2.6",
     "tailwind-merge": "^3.3.1",
+    "uuid": "^11.1.0",
     "zod": "^3.25.23",
     "zustand": "^5.0.4"
   },
@@ -38,6 +41,7 @@
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4.1.11",
     "@types/node": "^20",
+    "@types/nodemailer": "^7.0.0",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
